inference_gateway_gpu/manifests/07-gradio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-gpu
  labels:
    app: gradio-gpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio-gpu
  template:
    metadata:
      labels:
        app: gradio-gpu
    spec:
      containers:
      - name: gradio
        image: us-docker.pkg.dev/google-samples/containers/gke/gradio-app:v1.0.7
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 7860
---
apiVersion: v1
kind: Service
metadata:
  name: gradio-gpu
spec:
  selector:
    app: gradio-gpu
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 7860
