inference_gateway_gpu/manifests/05-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-httproute-gpu
  namespace: default
spec:
  parentRefs:
  - name: inference-gateway-gpu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: vllm-gpu-service
      port: 8000
